sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:5: error: missing arguments for method || in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
  while (gap>1 || swap = true){
               ^AlgCombSort:7: error: not found: value len
  	for (i<-0 to gap-len-1){
                         ^AlgCombSort:9: error: not found: value switch
      	switch(i, i+gap);
        ^